@@ -17,6 +17,7 @@ import org.apache.commons.logging.LogFactory;
 import org.springframework.web.servlet.mvc.Controller;
 
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -320,24 +321,24 @@ public abstract class HaplotyperController implements Controller {
             // if map key still not determined, set it to map key of primary reference assembly
             if (mapKey == 0) {
                 mapKey = MapManager.getInstance().getReferenceAssembly(SpeciesType.RAT).getKey();
-                //    mapKey=372;
             }
             vsb.setMapKey(mapKey);
         }
 
 
         String chromosome = req.getParameter("chr");
-        String start = URLDecoder.decode(req.getParameter("start"), "UTF-8").replaceAll(",", "");
-        String stop = URLDecoder.decode(req.getParameter("stop"), "UTF-8").replaceAll(",", "");
+        String start = URLDecoder.decode(req.getParameter("start"), StandardCharsets.UTF_8).replaceAll(",", "");
+        String stop = URLDecoder.decode(req.getParameter("stop"), StandardCharsets.UTF_8).replaceAll(",", "");
 
         if (chromosome.equals("") || start.equals("") || stop.equals("")) {
 
-            Position p = this.getPosition(req.getParameter("geneList"), req.getParameter("geneStart"), req.getParameter("geneStop"), mapKey);
+            Position p = this.getPosition(URLDecoder.decode(req.getParameter("geneList"),StandardCharsets.UTF_8), req.getParameter("geneStart"), req.getParameter("geneStop"), mapKey);
             chromosome = p.getChromosome();
             start = p.getStart() + "";
             stop = p.getStop() + "";
 
         } else {
+            // validating start and stop values
             try {
                 Integer.parseInt(start);
             } catch (Exception e) {
